fixtures/fennel/negative/unformatted.fnl
(local answer      42)
(print   answer)
